--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -23,7 +23,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.166 2005/10/14 01:27:18 ikerekes Exp $
+# $Id: hwdetect.in,v 1.167 2005/10/17 00:02:46 ikerekes Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -352,7 +352,7 @@ sub hwdetect_getvideo() {
 					$probed_card->{use_DRI_GLX} = 1;
 					$module = $probed_card->{Driver2};
 				}
-				if ($probed_card->{Driver} eq 'ati'){
+				if (!$probed_card->{DRI_GLX_SPECIAL} && $probed_card->{Driver} ne 'fbdev'){
 				$probed_card->{use_DRI_GLX} = 1;
 				}
 			}
@@ -973,7 +973,7 @@ MAIN: { print "\n$COLOR_YELLOW"."HWDETECT - MAIN ---------------$COLOR_NORMAL\n"
 	#Configure KEYBOARD routine goes here if $cmdline keyb
 	config_keyboard();
 	#Configure sata drives
-	config_sata();
+	config_sata() unless (`lsmod|grep sata`);
 	}
 	
 # New hwdetect routines
@@ -1029,7 +1029,7 @@ sub config_network() {
 }
 
 sub config_video() {
-	if (!defined($cmdline{xres}) && !defined($cmdline{xbpp}) && !defined($cmdline{xdrv})) {
+	if (defined($cmdline{xauto})) {
 		print getStr('video_probe');
 		harddrake::autoconf::xconf($modules_conf, {});
 		$modules_conf->write;
