--- a/mklivecd/src/rc.sysinit.in
+++ b/mklivecd/src/rc.sysinit.in
@@ -21,15 +21,15 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: rc.sysinit.in,v 1.57 2005/10/14 01:27:48 ikerekes Exp $
+# $Id: rc.sysinit.in,v 1.58 2005/10/29 15:10:40 ikerekes Exp $
 #
 
 export PATH=/initrd/bin:/initrd/sbin:/initrd/usr/bin:/initrd/usr/sbin:/bin:/sbin:/usr/bin:/usr/sbin
 
 #common variables 
 
-MNTCDROM=initrd/cdrom
-MNTLIVECD=initrd/loopfs
+MNTCDROM=/initrd/cdrom
+MNTLIVECD=/initrd/loopfs
 KERNELVER=`uname -r`
 MNTRAMDISK=/ramfs
 KERNEL26=1
