--- a/mklivecd/src/rc.sysinit.in
+++ b/mklivecd/src/rc.sysinit.in
@@ -21,7 +21,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: rc.sysinit.in,v 1.58 2005/10/29 15:10:40 ikerekes Exp $
+# $Id: rc.sysinit.in,v 1.59 2005/11/13 07:11:07 ikerekes Exp $
 #
 
 export PATH=/initrd/bin:/initrd/sbin:/initrd/usr/bin:/initrd/usr/sbin:/bin:/sbin:/usr/bin:/usr/sbin
@@ -200,7 +200,7 @@ execshell() {
 
 mountit(){
 # Usage: mountit src dst "options"
-    	  BUILTIN_FS="iso9660 vfat ext3 reiserfs ntfs"
+    	  BUILTIN_FS="iso9660 vfat ext3 ext2 msdos reiserfs ntfs"
     	  for fs in $BUILTIN_FS; do
         	test -b $1 && mount -t $fs $3 $1 $2 >/dev/null 2>&1 && return 0
     	  done
