loop1 change Thanks Dieter Schuetze

--- a/mklivecd/src/linuxrc.in
+++ b/mklivecd/src/linuxrc.in
@@ -23,7 +23,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) linuxrc script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: linuxrc.in,v 1.103 2006/01/09 05:28:45 tom_kelly33 Exp $
+# $Id: linuxrc.in,v 1.104 2006/04/01 23:11:41 ikerekes Exp $
 #
 
 ### global variables
@@ -519,7 +519,7 @@ if [ -n "$bootfrom" ]; then
 	mkdir -p /part
 	if [ -n "$ISO_PATH" ]; then #ISO_PATH doesn't work yet
 		mount -r -o ro $LOOP_DEV /part
-		losetup /dev/loop/1 /part$ISO_PATH
+		losetup /dev/loop1 /part$ISO_PATH
 		mount -r -t iso9660 /dev/loop/1 $MNTCDROM && printok || printfail
 		losetup /dev/loop0 $MNTCDROM/livecd.sqfs
 		mount -r -t squashfs /dev/loop0 $MNTLIVECD && LOOPMNT=1
