--- a/mklivecd/mklivecd.spec.in
+++ b/mklivecd/mklivecd.spec.in
@@ -1,4 +1,4 @@
-# $Id: mklivecd.spec.in,v 1.33 2005/01/15 00:31:09 tom_kelly33 Exp $
+# $Id: mklivecd.spec.in,v 1.34 2006/04/23 01:55:14 tom_kelly33 Exp $
 
 %define name	mklivecd
 %define version	@MKLIVECDVER@
@@ -14,7 +14,7 @@ License:	GPL
 Group:		System/Configuration/Boot and Init
 URL:		http://livecd.berlios.de/
 Source0:	%{name}-@ARCHIVEVER@.tar.bz2
-Requires:	busybox >= 1:1.00-0.pre4.2mdk, cloop-utils >= 1.02-4mdk
+Requires:	busybox >= 1:1.00-0.pre4.2mdk, 
 Requires:	mediacheck, mkisofs, squashfs-tools >= 1.4-0.1mdk
 Requires:	syslinux >= 1.76-15mdk
 BuildRoot:	%{_tmppath}/%{name}-root
