--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -22,7 +22,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.150 2006/04/01 23:01:22 ikerekes Exp $
+# $Id: mklivecd.in,v 1.151 2006/06/06 02:36:07 ikerekes Exp $
 #
 
 use strict;
@@ -58,8 +58,8 @@ my $modules_opt    = undef;
 
 my $modules_26     = '@DEF_MODULES_PATH_26@ @DEF_MODULES_DEP_PATH_26@ @DEF_MODULES_OPT_PATH_26@ @DEF_SCSI_MODULES_PATH_26@ @DEF_SCSI_MODULES_OPT_PATH_26@ @DEF_SCSI_MODULES_DEP_PATH_26@ @DEF_USB_MODULES_PATH_26@ @DEF_USB_MODULES_DRV_PATH_26@';
 my $modules_opt_26 = '@DEF_MODULES_OPT_PATH_26@ @DEF_SCSI_MODULES_OPT_PATH_26@ @DEF_USB_MODULES_DRV_PATH_26@';
-my $nodirs         = '^/[.].* ^/dev$ ^/initrd$ ^/lost+found$ ^/mnt$ ^/proc$ ^/tmp$ ^/var/tmp$';
-my $nofiles        = '^/[.].* ^/fastboot$ /core[.][0-9][0-9]*$ .*[.]rpmnew$ .*[.]rpmsave$ /[.]bash_history$ /[.]fonts[.]cache-[0-9]$ /[.]xauth.* /[.]xsession-errors$ ^/var/run/ ^/var/lock/subsys/';
+my $nodirs         = '^/[.].* ^/dev$ ^/initrd$ ^/lost+found$ ^/mnt$ ^/proc$ ^/sys$ ^/tmp$ ^/var/tmp$ ^/root/tmp$';
+my $nofiles        = '^/[.].* ^/fastboot$ /core[.][0-9][0-9]*$ .*~$ .*[.]rpmnew$ .*[.]rpmsave$ [.]bash_history$ [.]fonts[.]cache-[0-9]$ [.]xauth.* [.]wh[.]* [.]xsession-errors$ ^/var/run/ ^/var/lock/subsys/';
 my $loopmod        = undef;
 my $loopcmp        = undef;
 my $blocksize      = 32;
@@ -116,31 +116,31 @@ General Options:
    --noclean                       Don't remove temporary files on exit. #'
    --workdir			   Specify a working directory which will not
    				   be cleaned.
-   --debug                         Display some extra debugging information 
-                                   while building the CD. (Usefull for bug 
+   --debug                         Display some extra debugging information
+                                   while building the CD. (Usefull for bug
                                    reports to the developers.)
 
 Image generation:
    --root <rootdir>                Root directory of the live filesystem to use
-                                   as the for the image of the LiveCD. 
+                                   as the for the image of the LiveCD.
                                    (default: $o_root)
-   --tmp <tmpdir>                  Name of the directory to be used for 
-                                   temporary file storage. 
+   --tmp <tmpdir>                  Name of the directory to be used for
+                                   temporary file storage.
                                    (default: $o_tmp)
-   --img <image>                   Name of the saved compressed image. When an 
-                                   image by this name is found, it will not be 
-                                   re-created or overwritten, rather the 
-                                   existing image will be re-used, i.e. the 
+   --img <image>                   Name of the saved compressed image. When an
+                                   image by this name is found, it will not be
+                                   re-created or overwritten, rather the
+                                   existing image will be re-used, i.e. the
                                    compressed image is not re-built.
    --nofile <ex1>[,][...]          Excludes files from the final image. (Also
-                                   see the --nodir option for a full 
+                                   see the --nodir option for a full
                                    description)
    --nodir <ex1>[,][...]           Excludes directories from the final image.
                                    Patterns passed to this option (as with the
                                    --nofile option) should be valid in a grep(1)
                                    search, e.g. --nodir=^/home/jaco,^/root/.mcop
-                                   will exclude both the /home/jaco and 
-                                   /root/.mcop directories from the final 
+                                   will exclude both the /home/jaco and
+                                   /root/.mcop directories from the final
                                    LiveCD.
    --sort <file>                   Sort the files on the compressed iso image
                                    according to the mkisofs-style sort specifier
@@ -150,38 +150,38 @@ Image generation:
                                    (default: $o_kernel)
 
 Compression options:
-   --blocksize <size>              Compression (if used) blocksize in K 
+   --blocksize <size>              Compression (if used) blocksize in K
                                    (default: $blocksize)
    --looptype <clp|sqfs|iso|ziso>  Create a cloop, squashfs or iso (non-
-                                   compressed) image or compressed iso image. 
+                                   compressed) image or compressed iso image.
                                    (default: $o_looptype)
 
 Boot options:
-   --bootopt <option>              Specify an additional boot option to pass to 
+   --bootopt <option>              Specify an additional boot option to pass to
                                    the kernel command-line.
    --bootmsg <msg>                 Use 'msg' as the isolinux boot message.
    --bootkey <key=msg>             Display 'msg' on key 'key' from isolinux.
    --bootimg <img>                 Use 'img' (LSS format) as the isolinux.
                                    background display image.
-   --mdkboot                       Use the Mandrake boot image extension to 
+   --mdkboot                       Use the Mandrake boot image extension to
                                    display the boot message.
    --timeout <sec>                 Specify the default ISO Linux prompt timeout
-                                   in seconds. 
+                                   in seconds.
                                    (default: $o_timeout)
    --noprompt                      Disable ISO Linux prompt (i.e. prompt 0).
-   --keyboard <mapping>            Specify a different keyboard layout as 
-                                   default for the LiveCD. 
+   --keyboard <mapping>            Specify a different keyboard layout as
+                                   default for the LiveCD.
                                    (default: $o_keyboard)
-   --resolution <res>              Specify the resolution for the framebuffer 
+   --resolution <res>              Specify the resolution for the framebuffer
                                    output device. (Either resolution or normal)
                                    (default: $o_resolution)
    --splash <silent|verbose|no>    Create the LiveCD with bootsplash support if
-                                   available on the root filesystem. 
+                                   available on the root filesystem.
                                    (default: $o_splash)
    --fstab <options>               Override the default options for the fstab on
                                    the LiveCD. Options are one or more of 'auto'
                                    and 'rw', for example '--fstab=rw,auto' will
-                                   automatically mount all detected partitions 
+                                   automatically mount all detected partitions
                                    rw.
 
 ISO Image options:
@@ -429,8 +429,7 @@ sub parse_options {
 	die_("\nFATAL: Kernel (--kernel) '".$o_kernel."' not installed on the root image. (Directory '".$o_root."/lib/modules/".$o_kernel."' does not exist.)\n") if (!(-d $o_root."/lib/modules/".$o_kernel));
 	die_("\nFATAL: Extra ISO directory (--isoextrafiles) '".$opts{isoextrafiles}."' does not exist\n") if (defined($opts{isoextrafiles}) && !(-d $opts{isoextrafiles}));
 	die_("\nFATAL: Unknown splash (--splash) option '$o_splash'\n") unless ($o_splash =~ /silent|verbose|no/);
-	die_("\nFATAL: Work directory (--workdir) '".$opts{workdir}."' does not exist\n") if (defined($
-opts{workdir}) && !(-d $opts{workdir}));
+	die_("\nFATAL: Work directory (--workdir) '".$opts{workdir}."' does not exist\n") if (defined($opts{workdir}) && !(-d $opts{workdir}));
 
 	# final iso name
 	if (scalar(@ARGV) > 0) {
@@ -438,7 +437,7 @@ opts{workdir}) && !(-d $opts{workdir}));
 		$finaliso = $ARGV[0];
 	}
 	else {
-		die_("\nFATAL: No final iso name specified\n");
+		die_("\nFATAL: No final iso name specified\nUse --help for usage\n");
 	}
 
 	# set some options
@@ -469,7 +468,7 @@ opts{workdir}) && !(-d $opts{workdir}));
 	push @{$opts{nodir}}, split(/ /, $nodirs);
 
 	# setup executables
-	
+
 	$loopcmp = "/usr/bin/mksquashfs";
 	$loopmod = "fs/squashfs/squashfs";
 	$blocksize = defined($opts{blocksize}) ? $opts{blocksize} : 32;
@@ -530,7 +529,7 @@ sub check_resolution {
 	else {
 		die_("\nFATAL: Invalid resolution '$o_resolution' specified with '--resolution' option
        Valid resolutions are:
-             normal 
+             normal
             640x480
             800x600
            1024x768
@@ -581,7 +580,7 @@ sub create_initrd {
 
 	# start progress bar
 	my $pos = 0;
-	start_progress("Creating initrd", 42+scalar(@allmods)); 
+	start_progress("Creating initrd", 42+scalar(@allmods));
 
 	# create directories
 	my $dir = $workdir."/initrd.dir";
@@ -600,10 +599,10 @@ sub create_initrd {
 			do_copy("$dir/sbin/insmod-24",	755,	"$dir/sbin/insmod",	++$pos);
 		}
 	} else {
-		if (-e "$o_root/sbin/insmod.static") {	
+		if (-e "$o_root/sbin/insmod.static") {
 			do_copy("$o_root/sbin/insmod.static",	755,	"$dir/sbin/insmod.static", ++$pos);
 		}
-	} 
+	}
 
 	# copy files
 	do_copy("/usr/bin/busybox",               755, "$dir/bin/busybox",             ++$pos);
@@ -616,14 +615,14 @@ sub create_initrd {
 	do_copy($o_root."lib/libc.so.6",            0, "$dir/lib",                     ++$pos);
 	do_copy($o_root."lib/ld-linux.so.2",        0, "$dir/lib",                     ++$pos);
 
-	
+
 	# Copy but hide the udev binaries
 	do_cmd("mkdir $dir/sbin/tmp",			++$pos);
 	do_copy($o_root."/sbin/udev*",	  755, "$dir/sbin/tmp",			++$pos);
-	do_cmd("cp -a $o_root/etc/udev $dir/etc",	++$pos); 
+	do_cmd("cp -a $o_root/etc/udev $dir/etc",	++$pos);
 	if (-e "$o_root/etc/dev.d") {
 	    do_cmd("cp -a $o_root/etc/dev.d $dir/etc",	++$pos);
-	}  
+	}
 	do_cmd("cp -a $o_root/etc/hotplug $dir/etc",	++$pos);
 	do_cmd("cp -a $o_root/etc/hotplug.d $dir/etc",	++$pos);
 	do_cmd("cp -a $o_root/etc/sysconfig $dir/etc",	++$pos);
@@ -636,7 +635,7 @@ sub create_initrd {
 	do_cmd("mknod $dir/dev/tty$_ c 4 $_",   ++$pos) foreach((1,2,3,4));
 	do_cmd("mknod $dir/dev/lvm b 109 0",    ++$pos);
 
-	
+
 	# copy modules
 	foreach my $mod (@allmods) {
 		my $modpath = $o_root."lib/modules/$o_kernel/kernel/$mod$modext";
@@ -736,7 +735,7 @@ sub create_compressed {
 			my $total = scalar(@files);
 			start_progress("Creating compressed image", $total+2);
 			my $iso = "$loopcmp $o_root $workdir/livecd/livecd.$o_looptype -info -ef $workdir/excludes.list";
-			$iso = "$iso -sort $workdir/sort.list" if (defined($opts{sort})); 
+			$iso = "$iso -sort $workdir/sort.list" if (defined($opts{sort}));
 			$iso = "$iso 2>&1";
 			print "DEBUG: $iso\n" if (defined($opts{debug}));
 			open CMP, "$iso |" or die_("\nFATAL: Unable to execute '$iso'\n");
@@ -746,8 +745,13 @@ sub create_compressed {
 				if ($line =~ m/mksquashfs: file/) {
 					$linep = $line;
 					$pos++;
+					set_progress($pos, $linep);
 				}
-				set_progress($pos, $linep);
+				else {
+					if (defined($opts{debug})) {
+						print "$line\n" if ($line =~ m/Error/);
+					}
+				}
 			}
 			close CMP;
 			do_cmd("chmod 644 $workdir/livecd/livecd.$o_looptype", $total+1);
@@ -757,11 +761,11 @@ sub create_compressed {
 		else {
 			start_progress("Creating loop image", 10001);
 			my $iso = "mkisofs $mkisofs_opts -R -exclude-list $workdir/excludes.list -hide-rr-moved -cache-inodes -no-bak -pad -v -v";
-			$iso = "$iso -sort $workdir/sort.list" if (defined($opts{sort})); 
-			
-			
+			$iso = "$iso -sort $workdir/sort.list" if (defined($opts{sort}));
+
+
 			$iso = "$iso -o $workdir/livecd/livecd.$o_looptype $o_root";
-			
+
 			$iso = "($iso) 2>&1";
 			print "DEBUG: $iso\n" if (defined($opts{debug}));
 			open CMP, "$iso |" or die_("\nFATAL: Unable to execute '$iso'\n");
@@ -811,7 +815,7 @@ sub create_isolinux {
 		$appopt = "initrd=initrd.gz root=/dev/rd/3 noapic nolapic psmouse.proto=imps acpi=ht nomce vga=$o_vgamode keyb=$o_keyboard";
 	} else {
 		$appopt = "initrd=initrd.gz root=/dev/rd/3 devfs=mount vga=$o_vgamode keyb=$o_keyboard";
-	}	
+	}
 	$appopt .= " splash=$o_splash" if ($o_splash !~ m/no/);
 	$appopt = "$appopt fastboot=yes automatic=method:cdrom ramdisk_size=32000" if (!defined($kernel26));
 	$appopt = "$appopt fstab=".$opts{fstab} if (defined($opts{fstab}));
